--- a/frontend/myapp/src/App.css
+++ b/frontend/myapp/src/App.css
@@ -67,6 +67,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 #imageu {
   box-shadow: 0 0 2em #282c34;
@@ -105,7 +106,12 @@ h1 {
 }
 #foot {
   text-align: center;
-  background-color: none;
+  background-color: gray;
+  bottom: 0px;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  opacity: 85%;
 
 }
 #rule{
@@ -119,4 +125,8 @@ h1 {
   text-align: center;
   background-color: white;
   box-shadow: 0 0 1em #282c34;
+}
+
+.pokemon-list{
+  margin-bottom: 80px;
 }
